<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PayPanda Retailers</string>
    <string name="requested_permission">Requested Permission</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="location_permission">Location Permission</string>
    <string name="phone_number_permission">Receive Notification Permission</string>
    <string name="access_background_location">Access Background Location</string>
    <string name="access_background_location_text">We kindly request access to your background location to record your daily market visits and calculate visit duration accurately. This helps us provide you with valuable insights and optimize your experience. Rest assured, your location data will be used solely for this purpose and will not be shared without your consent.</string>
    <string name="camera_permissions_text">To facilitate easy and secure uploading of KYC documents or transaction receipts, this App requires access to your Camera Permission. This will enable you to directly capture images, making the process convenient and seamless. We assure you that your privacy is important to us, and the Camera Permission will only be used for the specified purposes.</string>
    <string name="phone_number_permissions_text">Allow us to send you notifications so you can keep track of their latest activities and never miss out on the fun. Be the first to know when your friends post, share, or engage with our app. Stay connected and in the know with your social circle!</string>
    <string name="location_permissions_text">To enhance your experience while using the App, we kindly request access to your LOCATION Permission. This permission will be utilized specifically during Your Registration &amp; Login, ensuring a smoother and more efficient process. Your privacy is of utmost importance to us, and we guarantee that the LOCATION Permission will solely be used for the stated functionalities.</string>
    <string name="essential_permissions">Essential Permissions</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="we_will_send_otp">We will send OTP on this number</string>
    <string name="_continue">Continue</string>
    <string name="terms_and_conditions">By continuing , you agree to</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="and">and</string>
    <string name="most_trusted_amp_secure_app"><![CDATA[Most Trusted & Secure App]]></string>
    <string name="_0000000000">0000000000</string>
    <string name="check_internet" tools:ignore="ExtraTranslation">Kindly Check Your Internet Connection !</string>
    <string name="enter_the_verification_code">Enter the Verification Code</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="select_company_to_join">Select Company to Join</string>
    <string name="welcome_to_work_track">Welcome to Work Track</string>
    <string name="slogan_1">Best Attendance App</string>
    <string name="or">-----OR-----</string>
    <string name="create_new_company">Create New Company</string>
    <string name="if_you_are_an_employee_text">If You are an employee than ask your employer to enroll you on WorkTrack platform</string>
    <string name="selfie_attendance">Selfie Attendance</string>
    <string name="setup_your_company">Setup Your Company</string>
    <string name="company_name">Enter Company Name</string>
    <string name="select_category">Select Business Category</string>
    <string name="staff_count">Staff Count</string>
    <string name="no_of_branches">No. of Branches</string>
    <string name="send_whatsapp_alerts">Send WhatsApp Alerts</string>
    <string name="select_business_category">Select Business Category</string>
    <string name="setup_attendance_location">Setup Attendance Location</string>
    <string name="google_map">Google Map</string>
    <string name="tell_us_your_company_address">Tell Us your company address !</string>
    <string name="amp_set_geofence_radius"><![CDATA[& set geofence radius]]></string>
    <string name="selected_address">Selected Address</string>
    <string name="maximum_attendance_radius">Maximum Attendance Radius</string>
    <string name="staff_can_mark_attendance_within_this_radius_only">Staff can mark attendance within this radius only !</string>
    <string name="present">Present</string>
    <string name="_0">0</string>
    <string name="absent">Absent</string>
    <string name="leave">Leave</string>
    <string name="total_staff">Total Staff - </string>
    <string name="add_staff">+ Add Staff</string>
    <string name="search_employee">Search Employee</string>
    <string name="you_don_t_have_any_employee_enrolled">You don\'t have Any employee enrolled. Kindly Add New Employee</string>
    <string name="_90000000000">90000000000</string>
    <string name="a_u" />
    <string name="manage_attendance">Manage Attendance</string>
    <string name="back_slash">/</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="enter_name">Enter Name</string>
    <string name="select_branch">Select Branch</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="dataman_it_solutions_pvt_ltd">Dataman IT Solutions Pvt Ltd</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="logout">Logout</string>
    <string name="company">Company</string>
    <string name="company_details">Company Details</string>
    <string name="click_to_upload_logo">Click to Upload logo</string>
    <string name="business_type">Business Type</string>
    <string name="company_address">Company Address</string>
    <string name="udyam_registration_number">Udyam Registration Number</string>
    <string name="gst_number">GST Number</string>
    <string name="update_company_details">Update Company Details</string>
    <string name="you_do_not_have_any_branch_added_kindly_add_new_branch">You do not have any branch added.Kindly add new branch.</string>
    <string name="update_branch">Update Branch</string>
    <string name="location_address">Location Address</string>
    <string name="actual_address">Actual Address</string>
    <string name="branch_name">Branch Name</string>
    <string name="_30_m">30 M</string>
    <string name="email_address">Enter Email Address</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="branch_mobile">Branch Contact Number</string>
    <string name="all_branches">All Branches</string>
    <string name="attendance">Attendance</string>
    <string name="settings">Settings</string>
    <string name="search_place_here">Search Place Here</string>
    <string name="mark_attendance">Punch In Now</string>
    <string name="set_branch_details">Set Branch Details</string>
    <string name="edit_branch_details">Edit Branch Details</string>
    <string name="attendance_for">Attendance For :</string>
    <string name="mark_all_present">Mark All Present</string>
    <string name="live_location">Live Location</string>
    <string name="select_year">Select Year</string>
    <string name="select_month">Select Month</string>
    <string name="add_punchin_time">Add PunchIN Time</string>
    <string name="trip_status">Trip Status :</string>
    <string name="trip_start_time">Trip Start Time :</string>
    <string name="start_trip">Start Trip</string>
    <string name="track_your_route">Track Your Route</string>
    <string name="trip_duration">Trip Duration</string>
    <string name="employee_settings">Employee Settings</string>
    <string name="cancel">CANCEL</string>
    <string name="go_to_map">Go to Map</string>
    <string name="marital_status">Marital Status</string>
    <string name="upload_employee_s_profile_pic">Upload Employee\'s Profile Pic</string>
    <string name="select_time">SELECT TIME</string>
    <string name="employee_name">Employee Name</string>
    <string name="shift_timings">Shift Timings</string>
    <string name="business_name">Business Name</string>
    <string name="add_party">Add Party</string>
    <string name="search_party">Search Party</string>
    <string name="daily_visits">Daily Visits</string>
    <string name="distance_from_business">Distance From Business</string>
    <string name="icon">Icon</string>
    <string name="splash_logo">splashlogo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_00_56">00:56</string>
    <string name="allow">Allow</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="ok">OK</string>
    <string name="your_name">Enter Your Name</string>
    <string name="create_company">Create Company</string>
    <string name="enter_designation">Enter Designation</string>
    <string name="employee_attendance">Employee Attendance</string>
    <string name="halfday">HalfDay</string>
    <string name="pl">PL</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="double_present">Double Present</string>
    <string name="holiday">Holiday</string>
    <string name="add_punchout_time">Add PunchOut Time</string>
    <string name="punchin_time">PunchIn Time -</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="save_remark">Save Remark</string>
    <string name="punchout_time">PunchOut Time -</string>
    <string name="gender">Gender</string>
    <string name="employee_esi_a_c">Employee ESI A/c</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="submit">Submit</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="back">back</string>
    <string name="aadhaar_enabled_payment_system">Aadhaar Enabled Payment System</string>
    <string name="_1_a_password_should_be_alphanumeric">1. A password should be alphanumeric</string>
    <string name="_2_first_letter_of_the_password_should_be_capital">2. Should be capital.</string>
    <string name="_4_length_must_be_greater_than_8_characters">4. Length must be greater than 8 characters.</string>
    <string name="_3_must_contain_a_special_character_amp_etc"><![CDATA[3. Must contain a special character (@, $, !, &, etc).]]></string>
    <string name="password_rules">Password Rules</string>
    <string name="transaction_filter">Transaction Filter</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="_25">25</string>
    <string name="_50">50</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="select_number_of_transactions">Select Number of Transactions</string>
    <string name="change_login_password">Change Login Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="filter_by_biller_name">Filter By Biller Name</string>
    <string name="filter_by_service_category">Filter By Service Category</string>
    <string name="filter_by_ca_number">Filter By CA Number</string>
    <string name="filter_by_account_number">Filter By Account Number</string>
    <string name="filter_by_customer_mobile">Filter By Customer Mobile</string>
</resources>