<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_5sdp"
        app:cardBackgroundColor="@color/bggrey"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_login_password"
                android:textSize="@dimen/_14ssp"
                style="@style/mostserrat_bold"
                android:textColor="@color/colorAccent"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/lock_astrisk"
                app:tint="@color/colorAccent" />
        </RelativeLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextInput4"
            app:endIconMode="password_toggle"
            android:layout_marginTop="@dimen/_10sdp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_old_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextInput4"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextInput4"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_new_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_rules"
            style="@style/mostserrat_bold"
            android:textSize="@dimen/_12sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_a_password_should_be_alphanumeric"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/_2_first_letter_of_the_password_should_be_capital"
            android:textSize="@dimen/_10sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/_3_must_contain_a_special_character_amp_etc"
            android:textSize="@dimen/_10sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/_4_length_must_be_greater_than_8_characters"
            android:textSize="@dimen/_10sdp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submitt_btn"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="change Password"
            style="@style/mostserrat_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>


    </LinearLayout>


</LinearLayout>