<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.aepsFragments.AepsMainFragment">

    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back"
            android:src="@drawable/left"
            app:tint="@color/white" />

        <TextView
            style="@style/mostserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/aadhaar_enabled_payment_system"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topPanel"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/splash_logo"
        android:src="@drawable/aeps_logo" />


</RelativeLayout>